--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -67,7 +67,7 @@ $bg-vector: url("../../images/vector.png");
       width: 45%;
 
       div {
-        // padding: 5px;
+        height: auto;
       }
       h4 {
         font-weight: 800;
