--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -68,6 +68,7 @@ $bg-vector: url("../../images/vector.png");
 
       div {
         height: auto;
+        width: auto;
       }
       h4 {
         font-weight: 800;
