--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -66,10 +66,10 @@ $bg-vector: url("../../images/vector.png");
     .benefit {
       width: 45%;
 
-      div {
-        height: auto;
-        width: auto;
-      }
+      // div {
+      //   height: auto;
+      //   width: auto;
+      // }
       h4 {
         font-weight: 800;
         font-size: 34px;
