--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -11,6 +11,8 @@
   line-height: 135%;
   letter-spacing: 0.01em;
   padding: 0 30px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  margin-bottom: 40px;
   .logo {
     text-transform: uppercase;
   }
