--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -141,7 +141,6 @@ h5 {
         font-weight: 800;
         font-size: 24px;
         line-height: 117%;
-        // width: 90%;
       }
 
       p {
@@ -157,6 +156,7 @@ h5 {
     .container {
       width: 96%;
       margin: 0 auto;
+      flex-wrap: wrap;
 
       .title {
         width: 45%;
@@ -170,16 +170,12 @@ h5 {
       .customer {
         width: 50%;
         position: relative;
-        // background-color: #7f52ff;
         padding-bottom: 80px;
         margin-top: 20px;
         .profile-pic {
           display: inline-block;
-          width: fit-content;
           height: 100px;
-          position: abolute;
-          top: 50%;
-          left: 0;
+
           background-color: #fbb065;
           border-radius: 15px;
           z-index: 1;
@@ -192,17 +188,40 @@ h5 {
         .feedback {
           background-color: #fff;
           width: 70%;
-          padding: 50px;
-          margin: -20px auto 0 auto;
+          padding: 55px;
+          margin: -40px auto 0 auto;
           z-index: -1;
           p {
             font-weight: 400;
             font-size: 18px;
             line-height: 147%;
-            margin: 0;
+            margin: 0 0 20px 0;
+          }
+          h5 {
+            font-weight: 700;
+            font-size: 20px;
+            line-height: 147%;
           }
         }
       }
+    }
+  }
+
+  .achievements {
+    background-color: #f2f5f9;
+    padding: 20px 25px;
+    margin: 20px 0;
+    text-align: center;
+    h4 {
+      font-weight: 800;
+      font-size: 64px;
+      line-height: 116%;
+    }
+    p {
+      font-weight: 800;
+      font-size: 24px;
+      line-height: 116%;
+      margin: 0;
     }
   }
 }
