Finishing all 5 pages

--- a/src/components/title/title.scss
+++ b/src/components/title/title.scss
@@ -3,6 +3,7 @@
   margin: 0 auto;
   text-align: center;
   position: relative;
+  padding-top: 10px;
 
   h1 {
     letter-spacing: 0.05em;
@@ -16,7 +17,7 @@
     width: 120px;
     background-color: #fbb065;
     margin: 0 auto;
-    height: 5px;
+    height: 10px;
     position: absolute;
     top: 0;
     left: 50%;
