--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,18 +1,26 @@
 .header {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   font-weight: 700;
   font-size: 24px;
   line-height: 135%;
   letter-spacing: 0.01em;
-  padding: 0 30px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  margin-bottom: 40px;
+  position: fixed;
+  width: 100%;
+  z-index: 11;
+  background-color: #fff;
+  .container {
+    width: 95%;
+    margin: 0 auto;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 0;
+  }
+
   .logo {
     text-transform: uppercase;
   }
@@ -61,6 +69,102 @@
       background-color: #202123;
       color: #fff;
       transition: all 0.4s;
+    }
+  }
+
+  .burger-menu {
+    display: none;
+    cursor: pointer;
+    .line {
+      width: 25px;
+      height: 3px;
+      background-color: #000;
+      margin: 5px auto;
+      transition: all 0.3s ease-in-out;
+    }
+  }
+
+  @media (max-width: 950px) {
+    & {
+      width: 100%;
+      button {
+        display: none;
+      }
+
+      .header-links {
+        position: fixed;
+        top: 45px;
+        left: -120%;
+        width: 100%;
+        height: 100vh !important;
+        transition: 0.3s;
+        flex-direction: column;
+        height: auto;
+        background: #1e1e1e;
+        justify-content: initial;
+
+        li {
+          text-align: center;
+          padding: 20px;
+          margin: 0;
+          width: 100%;
+
+          a {
+            color: #fff;
+
+            &:visited {
+              color: #fff;
+            }
+          }
+
+          &:hover {
+            background: rgba(117, 117, 117, 0.8);
+            transition: ease 0.2s;
+          }
+        }
+        .active-clicked {
+          padding: 20px;
+          .active-clicked {
+            background: #202123;
+          }
+        }
+      }
+
+      .header-links.active {
+        left: 0;
+        padding: 0;
+      }
+      .burger-menu {
+        display: block;
+      }
+
+      .burger-menu.active {
+        .line {
+          &:nth-child(2) {
+            opacity: 0;
+          }
+
+          color: #fff;
+        }
+      }
+
+      .burger-menu.active {
+        .line {
+          &:nth-child(1) {
+            transform: translateY(8px) rotate(45deg);
+          }
+          &:nth-child(3) {
+            transform: translateY(-8px) rotate(-45deg);
+          }
+
+          background-color: #fff;
+        }
+      }
+    }
+    &.active {
+      background: #1e1e1e;
+      backdrop-filter: blur(4px);
+      color: #fff;
     }
   }
 }
