--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -35,21 +35,48 @@
         font-weight: 400;
         font-size: 20px;
         line-height: 20px;
+        white-space: nowrap;
       }
 
       .submit {
         font-weight: 800;
         font-size: 20px;
         line-height: 20px;
-        margin-top: 40px !important;
         width: auto;
         color: #fff;
         background-color: #fbb065;
         margin: 0 auto;
+        margin-top: 40px !important;
         border-radius: 50px;
         padding: 10px 15px;
         cursor: pointer;
         border: none;
+      }
+    }
+  }
+
+  @media (max-width: 769px) {
+    & {
+      .container {
+        width: 95%;
+
+        h2 {
+          font-size: 24px;
+          text-align: center;
+        }
+
+        form {
+          flex-direction: column;
+          div {
+            width: 100%;
+          }
+
+          .submit {
+            font-size: 14px;
+            width: 90%;
+            margin: 20px auto;
+          }
+        }
       }
     }
   }
