--- a/src/components/title/title.scss
+++ b/src/components/title/title.scss
@@ -24,4 +24,12 @@
     transform: translateX(-50%);
     border-radius: 20px;
   }
+
+  @media (max-width: 769px) {
+    & {
+      h1 {
+        font-size: 36px;
+      }
+    }
+  }
 }
