--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -18,7 +18,7 @@ h5 {
 
 .title {
   position: relative;
-  width: 50%;
+  width: 60%;
   padding: 20px 0;
   margin: 20px 0;
 
@@ -38,6 +38,14 @@ h5 {
     font-size: 64px;
     line-height: 116%;
     letter-spacing: 0.05em;
+  }
+
+  @media (max-width: 769px) {
+    & {
+      h2 {
+        font-size: 32px;
+      }
+    }
   }
 }
 
@@ -69,11 +77,40 @@ h5 {
       width: 50%;
       height: 100%;
     }
+
+    @media (max-width: 900px) {
+      & {
+        flex-direction: column;
+        background-image: none;
+
+        div {
+          width: 100%;
+        }
+
+        h3 {
+          font-size: 24px;
+        }
+
+        p {
+          width: 70%;
+
+          @media (max-width: 769px) {
+            & {
+              font-size: 14px;
+            }
+          }
+        }
+        img {
+          width: 100%;
+        }
+      }
+    }
   }
 
   .stats {
     margin: 20px 0;
     padding: 0 25px;
+    flex-wrap: wrap;
     .stat {
       text-align: center;
       font-weight: 800;
@@ -82,35 +119,74 @@ h5 {
       text-align: center;
       letter-spacing: 0.02em;
       color: #000000;
-
       opacity: 0.4;
       span {
         width: 100%;
         display: table;
       }
     }
+
+    @media (max-width: 900px) {
+      & {
+        padding: 0;
+        .stat {
+          width: 50%;
+          font-size: 20px;
+        }
+      }
+    }
+    @media (max-width: 400px) {
+      & {
+        padding: 0;
+        .stat {
+          width: 100%;
+        }
+      }
+    }
   }
 
   .benefits {
-    flex-wrap: wrap;
     padding: 0 25px;
-    .benefit {
-      width: 45%;
 
-      h4 {
-        font-weight: 800;
-        font-size: 34px;
-        line-height: 117%;
+    .wrapper {
+      flex-wrap: wrap;
+
+      .benefit {
+        width: 45%;
+
+        h4 {
+          font-weight: 800;
+          font-size: 34px;
+          line-height: 117%;
+        }
+
+        p {
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 147%;
+        }
+
+        img {
+          margin-right: 15px;
+        }
       }
+    }
 
-      p {
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 147%;
-      }
+    @media (max-width: 769px) {
+      & {
+        .wrapper {
+          .benefit {
+            width: 100%;
+            margin: 10px 0;
 
-      img {
-        margin-right: 15px;
+            h4 {
+              font-size: 24px;
+            }
+            p {
+              font-size: 12px;
+            }
+          }
+        }
       }
     }
   }
@@ -125,6 +201,26 @@ h5 {
         font-weight: 800;
         font-size: 24px;
         line-height: 117%;
+      }
+    }
+
+    @media (max-width: 1024px) {
+      & {
+        flex-wrap: wrap;
+
+        .char {
+          width: 50%;
+          justify-content: space-around;
+          margin: 10px 0;
+        }
+      }
+    }
+    @media (max-width: 530px) {
+      & {
+        justify-content: center;
+        .char {
+          width: 80%;
+        }
       }
     }
   }
@@ -148,6 +244,32 @@ h5 {
         font-size: 20px;
         line-height: 150%;
         width: 80%;
+      }
+    }
+
+    @media (max-width: 900px) {
+      & {
+        .title {
+          width: 100%;
+        }
+        .illustration {
+          flex-direction: column;
+          justify-content: center;
+
+          .plan {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            margin-top: 5px;
+          }
+          img {
+            width: 15%;
+          }
+          p {
+            width: 100%;
+          }
+        }
       }
     }
   }
@@ -205,6 +327,44 @@ h5 {
         }
       }
     }
+
+    @media (max-width: 900px) {
+      & {
+        .container {
+          flex-direction: column;
+
+          .title {
+            width: 100%;
+          }
+
+          .customer {
+            width: 100%;
+
+            .feedback {
+              width: 75%;
+            }
+          }
+        }
+      }
+    }
+    @media (max-width: 769px) {
+      & {
+        .container {
+          .title {
+            width: 100%;
+          }
+
+          .customer {
+            p {
+              font-size: 12px;
+            }
+            h5 {
+              font-size: 14px;
+            }
+          }
+        }
+      }
+    }
   }
 
   .achievements {
@@ -222,6 +382,15 @@ h5 {
       font-size: 24px;
       line-height: 116%;
       margin: 0;
+    }
+
+    @media (max-width: 825px) {
+      & {
+        flex-direction: column;
+        div {
+          margin: 15px 0;
+        }
+      }
     }
   }
 }
