--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -7,6 +7,11 @@ h1 {
   margin: 0;
   margin-bottom: 20px;
 }
+@media (max-width: 769px) {
+  h1 {
+    font-size: 36px;
+  }
+}
 
 .about {
   p {
@@ -48,6 +53,32 @@ h1 {
           width: 100%;
         }
       }
+
+      @media (max-width: 769px) {
+        & {
+          width: 90%;
+          .work-type {
+            flex-direction: column-reverse;
+            img {
+              order: 1;
+              width: 40%;
+            }
+
+            .text {
+              width: 100%;
+              text-align: center;
+            }
+            h3 {
+              font-size: 24px;
+            }
+
+            p {
+              font-size: 16px;
+              text-align: center;
+            }
+          }
+        }
+      }
     }
   }
 
@@ -78,6 +109,30 @@ h1 {
 
       .right {
         text-align: right;
+      }
+    }
+
+    @media (max-width: 769px) {
+      & {
+        h1 {
+          margin: 0;
+        }
+
+        .eco-def {
+          flex-direction: column-reverse;
+          margin-top: 10px;
+          img {
+            order: 1;
+            align-self: flex-start;
+          }
+
+          .align-right {
+            align-self: flex-end;
+          }
+          p {
+            font-size: 16px;
+          }
+        }
       }
     }
   }
