--- a/src/pages/contactUs/contact-us.scss
+++ b/src/pages/contactUs/contact-us.scss
@@ -85,8 +85,13 @@
       font-size: 2.5rem;
     }
 
-    .textarea {
+    textarea {
       height: 200px;
+      border: 2px solid #a8a8a8;
+      font-size: 2rem;
+      width: 40%;
+      resize: none;
+      outline: none;
     }
 
     .submit {
@@ -101,6 +106,63 @@
       margin-top: 20px;
       padding: 20px 15px;
       height: auto;
+    }
+  }
+
+  @media (max-width: 769px) {
+    & {
+      .main-title {
+        &::before {
+          display: none;
+        }
+      }
+      .line {
+        display: none;
+      }
+
+      .contacts {
+        flex-direction: column;
+        align-items: center;
+
+        .hor-line {
+          display: none;
+        }
+        .hotline {
+          margin: 20px 0;
+          width: 100%;
+        }
+
+        .main-requests {
+          width: 100%;
+        }
+
+        span {
+          margin: 10px auto;
+        }
+
+        h5 {
+          font-weight: 900;
+        }
+      }
+
+      form {
+        input {
+          width: 100%;
+        }
+
+        textarea {
+          width: 100%;
+        }
+
+        .submit-btn {
+          margin: 0 auto;
+          width: 80%;
+          .submit {
+            font-size: 14px;
+            width: 100%;
+          }
+        }
+      }
     }
   }
 }
