--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -108,8 +108,8 @@ h5 {
   }
 
   .stats {
-    margin: 20px 0;
-    padding: 0 25px;
+    margin: 20px auto;
+    width: 90%;
     flex-wrap: wrap;
     .stat {
       text-align: center;
@@ -146,7 +146,8 @@ h5 {
   }
 
   .benefits {
-    padding: 0 25px;
+    margin: 0 auto;
+    width: 90%;
 
     .wrapper {
       flex-wrap: wrap;
@@ -192,9 +193,13 @@ h5 {
   }
 
   .chars {
-    padding: 10px 25px;
+    padding: 10px 0;
     background-color: #f2f5f9;
     margin: 20px 0;
+    .container {
+      width: 90%;
+      margin: 0 auto;
+    }
     .char {
       span {
         width: 60%;
@@ -226,8 +231,8 @@ h5 {
   }
 
   .business-plan {
-    padding: 0 25px;
-
+    width: 90%;
+    margin: 0 auto;
     .illustration {
       img {
         width: 30%;
@@ -276,7 +281,7 @@ h5 {
   .customers {
     background-color: #f2f5f9;
     .container {
-      width: 96%;
+      width: 90%;
       margin: 0 auto;
       flex-wrap: wrap;
 
@@ -369,9 +374,14 @@ h5 {
 
   .achievements {
     background-color: #f2f5f9;
-    padding: 20px 25px;
+    padding: 20px 0;
     margin: 20px 0;
     text-align: center;
+
+    .container {
+      width: 90%;
+      margin: 0 auto;
+    }
     h4 {
       font-weight: 800;
       font-size: 64px;
