Some minor style errors

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -197,34 +197,39 @@ h5 {
     background-color: #f2f5f9;
     margin: 20px 0;
     .container {
-      width: 90%;
+      width: 82%;
       margin: 0 auto;
     }
     .char {
       span {
-        width: 60%;
+        width: auto;
         font-weight: 800;
-        font-size: 24px;
+        font-size: 22px;
         line-height: 117%;
+        margin-left: 10px;
       }
     }
 
     @media (max-width: 1024px) {
       & {
-        flex-wrap: wrap;
-
-        .char {
-          width: 50%;
-          justify-content: space-around;
-          margin: 10px 0;
+        .container {
+          flex-wrap: wrap;
+          .char {
+            width: 50%;
+            justify-content: space-around;
+            margin: 10px 0;
+          }
         }
       }
     }
     @media (max-width: 530px) {
       & {
-        justify-content: center;
-        .char {
-          width: 80%;
+        .container {
+          justify-content: center;
+
+          .char {
+            width: 80%;
+          }
         }
       }
     }
@@ -396,7 +401,9 @@ h5 {
 
     @media (max-width: 825px) {
       & {
-        flex-direction: column;
+        .container {
+          flex-direction: column;
+        }
         div {
           margin: 15px 0;
         }
