Adding animations, fixing text in about us page

--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -2,7 +2,7 @@
   background-color: #f2f5f9;
   margin: 20px 0;
   padding: 20px 0;
-  .container {
+  .form-container {
     width: 60%;
     margin: 0 auto;
     h2 {
