--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -15,6 +15,7 @@
         line-height: 135%;
         text-transform: uppercase;
         margin: 0;
+        text-align: start;
       }
       p {
         margin: 0;
